# podbot

./: .gitignore  .pre-commit-config.yaml  README.md  jot.txt  pyproject.toml
podbot/: .Rhistory  .cli.py.un~  .command.py.un~  .podbot.py.un~  .podreader.py.un~  cli.py  command.py  logger.py  main.py  mplayer.py  podbot.py  podbot.py~  podbot_ui.py  podcasts.json  podcasts_url.txt  podreader.py  podreader.py~  secrets.ini  transcript.py
